# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.757 2008/09/25 00:20:31 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.3 (2008/??/??)
 - (2008/09/24) Fixed bug# 3322 - After updating SysConfig I get: Can't use
    string ("0") as a HASH ref while "strict refs" in use at
    Kernel/System/Config.pm line 716.
 - (2008/09/24) Fixed bug# 3321 - "(" or ")" in user name is braking ldap query
    for agent and customer auth.
 - (2008/09/13) Fixed bug# 3289 - Error when trying to delete an answer (with
    std attachment) in admin interface.
 - (2008/09/12) Fixed bug# 3292 - Missing entries in the generic agent mask if
    a freetext field is configured as pull down menu.
 - (2008/09/11) Fixed bug# 3275 - Kernel::System::EmailParser::CheckMessageBody
    uses undefined $Param{URL}.
 - (2008/09/11) Fixed bug# 3284 - Missing entries in the stats mask if a
    freetext field is configured as pull down menu.
 - (2008/09/10) Fixed bug# 3287 - Possible CSS on login page, in
    AgentTicketMailbox and CustomerTicketOverView.
 - (2008/09/08) Fixed bug# 3158 - Ticket has a "pending" state --> the
    escalation time is not set out.
 - (2008/09/08) Fixed bug# 3266 - backup.pl calls "mysqldump5" not "mysqldump".
 - (2008/09/08) Fixed bug# 3251 - Error retrieving pop3s email from gmail
    or MS Exchange.
 - (2008/09/08) Fixed bug# 3247 - GenericAgent is running also without time
    settings.
 - (2008/09/08) Fixed bug# 3261 - Escalation also for ro tickets (normally just
    rw tickets).
 - (2008/08/30) Fixed bug# 2862 - Wrong summary in GenericAgent webinterface
    after adding a new job. Max. shown 10,000 affected tickets.
 - (2008/08/30) Fixed bug# 3053 - AJAX functionality without cookies is not
    working.